wait this might actually be good UI
