# openapi.json
@@ -517,7 +517,8 @@
         "required": [
           "cases",
           "total",
-          "has_next"
+          "has_next",
+          "per_page"
         ],
         "properties": {
           "cases": {
@@ -528,6 +529,10 @@
           },
           "has_next": {
             "type": "boolean"
+          },
+          "per_page": {
+            "type": "integer",
+            "format": "int64"
           },
           "total": {
             "type": "integer",
